# nu_plugin_ulid

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs  plugin.rs
