[package]
name = "nu_plugin_ulid"
version = "0.16.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lizclipse/nu_plugin_ulid"
description = "A nushell plugin that adds various ulid commands"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
nu-plugin = "0.107.0"
nu-protocol = { version = "0.107.0", features = ["plugin"] }
ulid = { version = "1.2.1", features = ["uuid"] }
uuid = "1.18.1"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
